Update 2020-10-10-Install and Run-Solr on yarn.md